# mcp-protogen

./: LICENSE  Makefile  README.md  go.mod  go.sum
cmd/protoc-gen-mcp/: main.go
examples/basic/: .gitignore  README.md  pyproject.toml  test_client.py
examples/basic/proto/: buf.gen.yaml
examples/basic/proto/example/v1/: example.proto
examples/basic/server/: server.py
internal/generator/: generator.go
internal/generator/templates/: mcp.tmpl
